# TerAustralis-Incognita

./: .gitignore  .markdownlint.jsonc  .protection-test  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONSTITUTION.md  CONTRIBUTING.md  GITHUB-COMMIT-INSTRUCTIONS.md  LICENSE  LICENSE-CONTENT.md  LICENSE.md  LICENSING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  STATUS.md  THE-INCOGNITA-RULE.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  content_contribution.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  markdown-link-check-config.json  publish-packages.yml  (+1 more)
TeraAustralis/: README.md  mythic-essence.md
archive/: README.md
assets/: README.md
crystal-core/: .gitignore  FIRST-ACCELERATION-PLAN.md  NOTICE  README.md  SECURITY.md  crystalcore-atlas-path3.md  crystalcore-path7-ascent.md  index.html
crystalcore/: README.md  __init__.py  bridge.py  config.py  gate.py
docs/: ACCESS.md  ADVANCED_UNCERTAINTY_METHODS.md  ATTRIBUTIONS.md  COMMERCIAL_LICENSING_GUIDE.md  DBT_WAREHOUSE_INTEGRATION.md  EMOTIONAL_INTELLIGENCE_BLUEPRINT.md  FIRST_RELEASE.md  FULL-STACK-v0.5.md  HUGGINGFACE_INTEGRATION.md  MCP-GUEST.md  PUBLISHING.md  PUSH.md  README.md  RESTRUCTURING_COMPLETE.md
examples/: README.md
mythos/: COVENANT.md  CRYSTALCORE-OS-KNOWLEDGE.md  CRYSTALCORE-OS.md  NAMES.md  README.md  crystalcore_os.py
research/: README.md
scripts/: README.md
site/: package-lock.json  package.json  svelte.config.js
(+401 files in other folders)
